Added project for sample music website

--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,20 @@
                 <div class="box">
                     <!-- Project heading -->
                     <div class="box-cover">
+                        <button class="link-button"><h2 class="box-heading">Sample Music Website</h2></button>
+                    </div>
+                    
+                    <!-- Project modal -->
+                    <div class="box-container">
+                        <p class="description">Static website that emulates the look and feel of a small music instruction business.</p>
+                        <p class="technologies">HTML/CSS/JavaScript w/ jQuery</p>
+                        <a class="link" href="https://sample-music-website.netlify.app/">Link</a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <!-- Project heading -->
+                    <div class="box-cover">
                         <button class="link-button"><h2 class="box-heading">Python Project Manager</h2></button>
                     </div>
                     
