updated personal website sections

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <!-- Container holding the name and (possible) picture -->
             <div class="name-container">
                 <h1 class="heading">Yejoong (Paul) Kim</h1>
-                <h2 class="subheading">Software Engineer, Web Developer</h2>
+                <h2 class="subheading">Aspiring Software Engineer</h2>
             </div>
 
             <!-- A blurb describing me in a few short sentences -->
             <div class="side-container right">
                 <h2 class="sub-heading">About Me</h2>
-                <p>Welcome to my personal website! My name is Yejoong (Paul) Kim, and I will be graduating with a Bachelor's of Arts in Computer Science from Princeton University in 2023. Here on this website, you'll find a summary of my projects and experience I have accumulated throughout my time in college. I love full-stack development, especially when dealing with database programming.</p>
-                <p>Outside of coding, I love singing and playing piano, as well as composing music.</p>
+                <p>Welcome to my personal website! My name is Yejoong (Paul) Kim, and I will be graduating with a Bachelor's of Arts in Computer Science from Princeton University in 2023. Here on this website, you'll find a summary of my projects and experience I have accumulated throughout my time in college. I love full-stack development, especially when dealing with database programming, and I am excited to learn about new technologies.</p>
+                <p>Outside of coding, I love singing and playing piano, as well as composing music!</p>
             </div>
 
             <!-- Links containing more pages -->
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </div>
-        
+
         <!-- Footer -->
         <div id="footer"></div>
     </body>
