--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <h2>See me at:</h2>
             <div class="grid-container">
                 <a class="link" href="https://github.com/kypercoding" target="_blank"><embed src="resources/images/GitHub-Mark-120px-plus.png"></a>
-                <a class="link" href="https://www.linkedin.com/in/yejoong-kim-87701b20b" target="_blank"><embed src="resources/images/In-Blue-Logo.png.original.png"></a>
+                <a class="link" href="https://www.linkedin.com/in/yejoong-p-kim" target="_blank"><embed src="resources/images/In-Blue-Logo.png.original.png"></a>
             </div>
             <h2>Or contact me at:</h2>
             <a class="link" href="mailto:kypercoding@gmail.com">kypercoding@gmail.com</a>
